{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 17,
  "lineage": "f937556e-6a93-ac6f-e473-a810de4dd522",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_securitygrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:security-group/sg-022af6c607d01911f",
            "description": "Allow inbound traffic to ECS containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022af6c607d01911f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "my-ecs-app-ecs-securitygrp",
            "name_prefix": "",
            "owner_id": "411004175312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-ecs-app-ecs-sg"
            },
            "tags_all": {
              "Name": "my-ecs-app-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9611cb90009ab19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:security-group/sg-00d54c7f765980402",
            "description": "Allow inbound traffic to ECS containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d54c7f765980402",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "my-ecs-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "411004175312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-ecs-app-ecs-sg"
            },
            "tags_all": {
              "Name": "my-ecs-app-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9611cb90009ab19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-kp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:internet-gateway/igw-0ee658dde2cb1c029",
            "id": "igw-0ee658dde2cb1c029",
            "owner_id": "411004175312",
            "tags": {
              "Name": "my-ecs-app-igw"
            },
            "tags_all": {
              "Name": "my-ecs-app-igw"
            },
            "vpc_id": "vpc-0b9611cb90009ab19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee658dde2cb1c029",
            "id": "r-rtb-021968f1ded0785641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021968f1ded078564",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-kp",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:route-table/rtb-021968f1ded078564",
            "id": "rtb-021968f1ded078564",
            "owner_id": "411004175312",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-ecs-app-public-rt"
            },
            "tags_all": {
              "Name": "my-ecs-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9611cb90009ab19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0962ce66222674e98",
            "route_table_id": "rtb-021968f1ded078564",
            "subnet_id": "subnet-00928e996e7f0c3ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:subnet/subnet-00928e996e7f0c3ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00928e996e7f0c3ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411004175312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-ecs-app-public-subnet"
            },
            "tags_all": {
              "Name": "my-ecs-app-public-subnet"
            },
            "vpc_id": "vpc-0b9611cb90009ab19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-kp"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-kp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411004175312:vpc/vpc-0b9611cb90009ab19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c635f6f23798c421",
            "default_route_table_id": "rtb-0860e3b977cbbe6a1",
            "default_security_group_id": "sg-0dfde9b3252b95ced",
            "dhcp_options_id": "dopt-02f09532efcafbaba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9611cb90009ab19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0860e3b977cbbe6a1",
            "owner_id": "411004175312",
            "tags": {
              "Name": "my-ecs-app-vpc"
            },
            "tags_all": {
              "Name": "my-ecs-app-vpc"
            }
          }
        }
      ]
    }
  ]
}